--- a/cv/index.html
+++ b/cv/index.html
@@ -107,7 +107,7 @@ window.onload = emailCloak;
 	      <p class="section">Experience</p>
 	    <ul class=cv>
 	    <li>2014 Distinguished EPJ Referee</li>
-	    <li>Member of 2015 UPoN International Scientific Committee</li>
+	    <li>Member of 2015, 2018 UPoN International Scientific Committee</li>
 	    </ul>
 	      <p class="section">Membership</p>
 	    <ul class=cv>
