--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ window.onload = emailCloak;
 <div style="float:left; width: 33%;">
 <ul class="home">
 <li><a href="http://www.us.edu.pl">University of Silesia</a></li>
+<li><a href="https://www.us.edu.pl/wydzial/wnst">Faculty of Science and Technology</a></li>
 <li><a href="http://fizyka.us.edu.pl">Institute of Physics</a></li>
 <li><a href="http://fizyka.us.edu.pl/zmkf/start.html">Divison of Computational
 Physics and Electronics</a><br>
@@ -61,7 +62,7 @@ fax +48 32 258-36-53<br>
 room: 528-->
 </li>
 <li><a href="http://www.smcebi.us.edu.pl/">Silesian Center for Education and 
-Interdisciplinary Research</a><br>
+Interdisciplinary Research</a><br><br>
 ul. 75 Pułku Piechoty 1A<br>
 41-500 Chorzów<br>
 office: (032) 349 7605<br>
