--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ window.onload = emailCloak;
 
 <body>
 <div id="container">
-<div id="top">dr hab. Łukasz Machura</div>
+<div id="top">dr hab. prof UŚ Łukasz Machura</div>
 <div class="navid">
             <div class="here">Home</div>
             <div class="nav"><a href="cv/index.html">Cv</a></div>
@@ -53,14 +53,6 @@ window.onload = emailCloak;
 <li><a href="http://www.us.edu.pl">University of Silesia</a></li>
 <li><a href="https://www.us.edu.pl/wydzial/wnst">Faculty of Science and Technology</a></li>
 <li><a href="http://fizyka.us.edu.pl">Institute of Physics</a></li>
-<li><a href="http://fizyka.us.edu.pl/zmkf/start.html">Divison of Computational
-Physics and Electronics</a><br>
-<!--ul. Uniwersytecka 4<br>
-40 - 007 Katowice, Poland<br>
-office: +48 32 359-21-07<br>
-fax +48 32 258-36-53<br>
-room: 528-->
-</li>
 <li><a href="http://www.smcebi.us.edu.pl/">Silesian Center for Education and 
 Interdisciplinary Research</a><br><br>
 ul. 75 Pułku Piechoty 1A<br>
@@ -87,7 +79,7 @@ room: E/1/11</li>
 </div>
 <div id="footer">
 &copy; 2014, <a href="mailto:lukasz.machura@us.edu.pl">Łukasz Machura</a>,  
-Department of Theoretical Physics, Institute of Physics,
+Institute of Physics, SMCEBI,
 University of Silesia,
-ul. Uniwersytecka 4, 40-007 Katowice
+ul. 75 Pułku Piechoty 1A, 41-500 Chorzów
 </div></body></html>
