--- a/publications/index.html
+++ b/publications/index.html
@@ -40,7 +40,7 @@ window.onload = emailCloak;
 
 <body>
 <div id="container">
-<div id="top">dr hab. Łukasz Machura</div>
+<div id="top">dr hab. prof UŚ Łukasz Machura</div>
 <div class="navid">
             <div class="nav"><a href=".././index.html">Home</a></div>
             <div class="nav"><a href="../cv/index.html">Cv</a></div>
@@ -404,7 +404,7 @@ window.onload = emailCloak;
 </div>
 <div id="footer">
 &copy; 2014, <a href="mailto:lukasz.machura@us.edu.pl">Łukasz Machura</a>,  
-Department of Theoretical Physics, Institute of Physics,
+Institute of Physics, SMCEBI,
 University of Silesia,
-ul. Uniwersytecka 4, 40-007 Katowice
+ul. 75 Pułku Piechoty 1A, 41-500 Chorzów
 </div></body></html>
