Assoc. Prof., Professor of the University

--- a/cv/index.html
+++ b/cv/index.html
@@ -84,9 +84,11 @@ window.onload = emailCloak;
 	      <li>2006-2007 Instructor (asystent), Institute of Physics, University of 
 	      Silesia, Katowice, Poland.
 	      </li>
-	      <li>2007-present Assistant Professor (adiunkt), Institute of Physics, 
+	      <li>2007-2019 Assistant Professor (adiunkt), Institute of Physics, 
 	      University of Silesia, Katowice, Poland.
 	      </li>
+	      <li>2019-present Assoc. Prof., Professor of the University
+of Silesia, Katowice, Poland</li>
 	    </ul>
 	      <p class="section">Scholarschips and Grants</p>
 	    <ul class=cv>
