--- a/publications/index.html
+++ b/publications/index.html
@@ -66,7 +66,7 @@ window.onload = emailCloak;
 </a>, </div></div>
 
 <div style="padding-top: 10px;">37. "Single measurement detection of individual cell ionic oscillations using an n-type semiconductor – electrolyte interface",<br>M. Pietruszka, M. Olszewska, L. Machura and E. Rowinski 
-<br>ref: <b>:Sci. Rep. 8</b>,  7875 (2018)
+<br>ref: <b>Sci. Rep. 8</b>,  7875 (2018)
 <br><a href="javascript:unhide('pub37');">Abstract and paper</a><div id="pub37" class="hidden">Pollen tubes are intense growing plant cells able to quickly invade the flower pistil in order to accomplish fertilization. How different ionic fluxes are perceived, processed or generated in the pollen tube is unsatisfactory understood. To measure H+/K+, Ca2+ and Cl- currents of a single pollen tube we developed an Electrical Lab-on a Photovoltaic-Chip (ELoPvC), where the evolving cell was immersed in an electrolyte of a germination medium. Pollen from the species of hyacinth were investigated: we observed that the growing cell changed the (redox) potential in the medium in a periodic manner. This subtle measurement was feasible thanks to the effects taking place at the semiconductor – fluid interface. The experiment confirmed the existence of ionic oscillations accompanying periodical extension of pollen tubes, providing – in a single run – a complete discrete frequency spectrum, while all of the metabolic and enzymatic functions of the life cell cycle were preserved.<br><br>pdf: <a href="2018_scirep/Pietruszka_et_al-2018-Scientific_Reports.pdf
 " download target="_blank">Pietruszka_et_al-2018-Scientific_Reports.pdf
 </a>, </div></div>
