--- a/cv/index.html
+++ b/cv/index.html
@@ -87,7 +87,7 @@ window.onload = emailCloak;
 	      <li>2007-2019 Assistant Professor (adiunkt), Institute of Physics, 
 	      University of Silesia, Katowice, Poland.
 	      </li>
-	      <li>2019-present Assoc. Prof., Professor of the University
+	      <li>2019-present Associate Professor, Professor of the University
 of Silesia, Katowice, Poland</li>
 	    </ul>
 	      <p class="section">Scholarschips and Grants</p>
